Closed Bug 805533 Opened 12 years ago Closed 12 years ago

Signaling - SDP Parser should pass errors up to PeerConnection

Categories

(Core :: WebRTC: Signaling, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla19
Tracking Status
firefox18 --- wontfix
firefox19 --- affected

People

(Reporter: ehugg, Assigned: ehugg)

References

Details

(Whiteboard: [leave-open] [WebRTC] [blocking-webrtc-] [qa-])

Attachments

(2 files, 4 obsolete files)

The SDP Parser currently just logs errors to NSPR. It needs to pass them up to PeerConnection so they can be accessible from JS.
Assignee: nobody → ethanhugg
Attachment #675312 - Attachment is obsolete: true
Attachment #675438 - Attachment is obsolete: true
Comment on attachment 675668 [details] [diff] [review] Patch 1 - send parse errors through single function -Changed all SDP parsing errors to go through one function, other SDP errors still go to log. -Moved SDP structure defines into sdp.h to get rid of some void* folderol. -Moved PC_HANDLE_SIZE def to a more central location since I added pc handle to sdp_t. -Got rid of SDP_ERROR, SDP_WARN and sdp_log_errmsg -removed unused sipsdp_create_from_buf Next patch will be hooking up the output through vcmcSIPCCBinding and up to PC.
Attachment #675668 - Flags: review?(rjesup)
Comment on attachment 675668 [details] [diff] [review] Patch 1 - send parse errors through single function Review of attachment 675668 [details] [diff] [review]: ----------------------------------------------------------------- r+, though MEGO on all the mechanical debug changes
Attachment #675668 - Flags: review?(rjesup) → review+
Attachment #675668 - Flags: checkin?(rjesup)
Attachment #675668 - Flags: checkin?(rjesup) → checkin+
Whiteboard: [leave-open] → [leave-open] [WebRTC] [blocking-webrtc-]
Priority: -- → P2
Comment on attachment 682086 [details] [diff] [review] Pass SDP parsing errors up to PeerConnection Looking for feedback for how we should hook this up with the IDL and JS.
Attachment #682086 - Flags: feedback?(rjesup)
Attachment #682086 - Flags: feedback?(rjesup) → review+
If we can only have one SDP parse (per PeerConnection) in flight at a time (i.e. SetLocal/RemoteDescription), then we probably *can* just use a single onsdpparseerror attribute. The alternative is to add it as an optional parameter to SetLocal/RemoteDescription, which might make a little more sense, and if it's optional, it won't break existing uses. Obviously all this should be in the purview of the W3C; if it hasn't been discussed we can pick one for now and then suggest it (or suggest both) on public-webrtc. If they have discussed an API for this, let's start with that. Once we decide on which, implementation can just copy existing onblah or callback code.
Attachment #682086 - Attachment is obsolete: true
Attachment #721928 - Attachment is obsolete: true
Comment on attachment 721930 [details] [diff] [review] Patch 2 - Pass SDP parsing errors up to PeerConnection EKR suggested that I pipe these error messages up one more layer and store them in a list in PeerConnection. Then we could close this bug and open a new one when the standard tells us how to report them.
Attachment #721930 - Flags: review?(rjesup)
Attachment #721930 - Flags: review?(rjesup) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Flags: in-testsuite- → in-testsuite?
Whiteboard: [leave-open] [WebRTC] [blocking-webrtc-] → [leave-open] [WebRTC] [blocking-webrtc-] [qa-]
Blocks: 866358
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: