Bug 805533 Send SDP parse errors through single function for reporting r=jesup